modified:   cluster.yml 	modified:   fdisk.yml 	modified:   group_vars/all.yml 	modified:   inventory 	modified:   roles/cert/tasks/main.yml 	modified:   roles/cni-plugins/tasks/main.yml 	new file:   roles/cni-plugins/templates/cni-default.conf.j2 	new file:   roles/container-runtime/handlers/main.yml 	renamed:    roles/containerd/tasks/main.yml -> roles/container-runtime/tasks/containerd.yml 	new file:   roles/container-runtime/tasks/docker.yml 	new file:   roles/container-runtime/tasks/main.yml 	renamed:    roles/containerd/templates/config.toml.j2 -> roles/container-runtime/templates/config.toml.j2 	new file:   roles/container-runtime/templates/daemon.json.j2 	new file:   roles/container-runtime/vars/ubuntu.yml 	deleted:    roles/containerd/handlers/main.yml 	modified:   roles/keepalived/templates/keepalived.conf.j2 	modified:   roles/master/tasks/main.yml 	modified:   roles/master/templates/admin.kubeconfig.j2 	modified:   roles/master/templates/kube-apiserver.conf.j2 	modified:   roles/worker/tasks/main.yml 	modified:   roles/worker/templates/10-kubelet.conf.j2 	modified:   roles/worker/templates/kubelet.service.j2

--- a/roles/keepalived/templates/keepalived.conf.j2
+++ b/roles/keepalived/templates/keepalived.conf.j2
@@ -22,15 +22,15 @@ vrrp_instance VI_1 {
         auth_type PASS
         auth_pass kuburnetes
     }
-    unicast_peer {
-    {% for host in groups['haproxy'] %}
-      {{ host }}
-    {% endfor %}
 
+    unicast_peer {
+        {{ unicast_peer }}
     }
+
     virtual_ipaddress {
-        {{loadbalance.ip}}
+        {{ loadbalance.ip }}/{{ loadbalance.netmask }}
     }
+
     track_script {
         Checkhaproxy
     }
