--- a/roles/master/templates/admin.kubeconfig.j2
+++ b/roles/master/templates/admin.kubeconfig.j2
@@ -8,13 +8,13 @@ clusters:
 contexts:
 - context:
     cluster: kubernetes
-    user: kubernetes-admin
+    user: {{ kubernetes.admin }}
   name: kubernetes
 current-context: kubernetes
 kind: Config
 preferences: {}
 users:
-- name: kubernetes-admin
+- name: {{ kubernetes.admin  }}
   user:
     client-certificate: /etc/kubernetes/pki/admin.pem
     client-key: /etc/kubernetes/pki/admin.key
