--- a/roles/worker/templates/10-kubelet.conf.j2
+++ b/roles/worker/templates/10-kubelet.conf.j2
@@ -3,10 +3,14 @@ KUBELET_ARGS="\
     --bootstrap-kubeconfig=/etc/kubernetes/bootstrap.kubeconfig \
     --kubeconfig=/etc/kubernetes/kubelet.kubeconfig  \
     --config=/etc/kubernetes/kubelet.conf \
+{% if container_runtime == "containerd" %}
     --runtime-cgroups=/system.slice/containerd.service \
     --container-runtime=remote \
-    --container-runtime-endpoint=unix://{{containerd.state}}/containerd.sock \
-    --image-service-endpoint=unix://{{containerd.state}}/containerd.sock \
+    --container-runtime-endpoint=unix:///var/run/containerd.sock \
+    --image-service-endpoint=unix:///var/run/containerd.sock \
+{% else %}
+    --container-runtime=docker \
+{% endif %}
     --cert-dir=/etc/kubernetes/pki \
     --root-dir={{ kubernetes.kubelet_dir | default("/var/lib/kubelet") }} \
     --network-plugin=cni \
