modified:   cluster.yml 	modified:   group_vars/all.yml 	new file:   roles/addons/tasks/helm.yml 	new file:   roles/addons/tasks/ingress.yml 	modified:   roles/addons/tasks/main.yml 	new file:   roles/addons/templates/ingress-configmap.yaml.j2 	new file:   roles/addons/templates/ingress.yaml.j2 	modified:   roles/init/files/chrony.conf 	modified:   roles/master/templates/kube-apiserver.conf.j2 	modified:   roles/network-plugins/tasks/calico.yml 	modified:   roles/purge/tasks/main.yml 	modified:   roles/worker/templates/10-kubelet.conf.j2 	modified:   roles/worker/templates/kubelet.conf.j2

--- a/roles/master/templates/kube-apiserver.conf.j2
+++ b/roles/master/templates/kube-apiserver.conf.j2
@@ -19,7 +19,9 @@ KUBE_API_ARGS="\
     --insecure-port=0 \
     --kubelet-client-certificate=/etc/kubernetes/pki/apiserver-kubelet-client.pem \
     --kubelet-client-key=/etc/kubernetes/pki/apiserver-kubelet-client.key \
-    --kubelet-preferred-address-types=InternalIP,ExternalIP,Hostname \
+    --kubelet-preferred-address-types=Hostname,InternalDNS,InternalIP,ExternalDNS,ExternalIP \
+    --max-mutating-requests-inflight=2000 \
+    --max-requests-inflight=4000 \
     --proxy-client-cert-file=/etc/kubernetes/pki/front-proxy-client.pem \
     --proxy-client-key-file=/etc/kubernetes/pki/front-proxy-client.key \
     --requestheader-allowed-names=front-proxy-client \
