modified:   cluster.yml 	modified:   group_vars/all.yml 	modified:   roles/addons/templates/ingress.yaml.j2 	modified:   roles/cni-plugins/tasks/main.yml 	modified:   roles/container-runtime/handlers/main.yml 	modified:   roles/container-runtime/tasks/docker.yml 	modified:   roles/network-plugins/tasks/calico.yml 	modified:   roles/worker/tasks/main.yml 	modified:   roles/worker/templates/10-kubelet.conf.j2 	modified:   roles/worker/templates/kubelet.service.j2

--- a/roles/worker/templates/10-kubelet.conf.j2
+++ b/roles/worker/templates/10-kubelet.conf.j2
@@ -14,6 +14,6 @@ KUBELET_ARGS="\
 {% endif %}
     --cert-dir=/etc/kubernetes/pki \
     --root-dir={{ kubernetes.kubelet_dir | default("/var/lib/kubelet") }} \
-    --pod-infra-container-image={{ kubernetes.infraimage }} \
+    --pod-infra-container-image={{ kubernetes.pod_infraimage }} \
     --network-plugin=cni \
     --v=2"
