--- a/roles/addons/templates/ingress.yaml.j2
+++ b/roles/addons/templates/ingress.yaml.j2
@@ -294,7 +294,7 @@ spec:
     app.kubernetes.io/component: controller
 ---
 apiVersion: apps/v1
-kind: DeamonSet
+kind: DaemonSet
 metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
